--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,11 @@
 .about-text h2 {
   font-size: 2em;
   margin-bottom: 20px;
+  color: #1f2d3d;
 }
 
 .about-text p {
   font-size: 1.1em;
   line-height: 1.6;
+  color: #1f2d3d;
 }
-
